--- a/Sqlite/QrF.Sqlite/QrF.Sqlite.csproj
+++ b/Sqlite/QrF.Sqlite/QrF.Sqlite.csproj
@@ -77,6 +77,7 @@
   <ItemGroup>
     <Compile Include="Contract\Customer.cs" />
     <Compile Include="Contract\Requests.cs" />
+    <Compile Include="Contract\User.cs" />
     <Compile Include="EntityFramework\SqliteDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\ISqliteService.cs" />
