--- a/QrF.Sqlite.Demo/packages.config
+++ b/QrF.Sqlite.Demo/packages.config
@@ -1,6 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
+  <package id="EntityFramework" version="6.1.0" targetFramework="net452" />
+  <package id="EntityFramework.Extended" version="6.1.0.168" targetFramework="net452" />
   <package id="log4net" version="2.0.5" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
+  <package id="SQLite.CodeFirst" version="1.2.0.12" targetFramework="net452" />
+  <package id="System.Data.SQLite" version="1.0.101.0" targetFramework="net452" />
+  <package id="System.Data.SQLite.Core" version="1.0.101.0" targetFramework="net452" />
+  <package id="System.Data.SQLite.EF6" version="1.0.101.0" targetFramework="net452" />
+  <package id="System.Data.SQLite.Linq" version="1.0.101.0" targetFramework="net452" />
   <package id="Topshelf" version="4.0.1" targetFramework="net452" />
   <package id="Topshelf.Log4Net" version="4.0.1" targetFramework="net452" />
 </packages>
