--- a/Sqlite/QrF.Sqlite/App.config
+++ b/Sqlite/QrF.Sqlite/App.config
@@ -11,6 +11,7 @@
       </parameters>
     </defaultConnectionFactory>
     <providers>
+      <provider invariantName="System.Data.SQLite" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
       <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
