--- a/Sqlite/QrF.Sqlite/QrF.Sqlite.csproj
+++ b/Sqlite/QrF.Sqlite/QrF.Sqlite.csproj
@@ -52,6 +52,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\_Lib\QrF.Framework.dll</HintPath>
     </Reference>
+    <Reference Include="SQLite.CodeFirst, Version=1.2.0.12, Culture=neutral, PublicKeyToken=eb96ba0a78d831a7, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\SQLite.CodeFirst.1.2.0.12\lib\net45\SQLite.CodeFirst.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -76,9 +80,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contract\Customer.cs" />
+    <Compile Include="Contract\CustomHistory.cs" />
     <Compile Include="Contract\Requests.cs" />
     <Compile Include="Contract\User.cs" />
     <Compile Include="EntityFramework\SqliteDbContext.cs" />
+    <Compile Include="EntityFramework\SqliteDbInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\ISqliteService.cs" />
     <Compile Include="Service\SqliteService.cs" />
