--- a/Sqlite/QrF.Sqlite/packages.config
+++ b/Sqlite/QrF.Sqlite/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="EntityFramework" version="6.1.0" targetFramework="net452" />
   <package id="EntityFramework.Extended" version="6.1.0.168" targetFramework="net452" />
+  <package id="SQLite.CodeFirst" version="1.2.0.12" targetFramework="net452" />
   <package id="System.Data.SQLite" version="1.0.101.0" targetFramework="net452" />
   <package id="System.Data.SQLite.Core" version="1.0.101.0" targetFramework="net452" />
   <package id="System.Data.SQLite.EF6" version="1.0.101.0" targetFramework="net452" />
