--- a/Sqlite/QrF.Sqlite/QrF.Sqlite.csproj
+++ b/Sqlite/QrF.Sqlite/QrF.Sqlite.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Contract\CustomHistory.cs" />
     <Compile Include="Contract\IEntity.cs" />
     <Compile Include="Contract\Requests.cs" />
+    <Compile Include="Contract\Menu.cs" />
     <Compile Include="Contract\User.cs" />
     <Compile Include="EntityFramework\SqliteDbContext.cs" />
     <Compile Include="EntityFramework\SqliteDbInitializer.cs" />
