修改form初始化方法

--- a/QrF.Sqlite.Nancy/QrF.Sqlite.Nancy.csproj
+++ b/QrF.Sqlite.Nancy/QrF.Sqlite.Nancy.csproj
@@ -284,7 +284,10 @@
     <Content Include="content\js\lib\datepicker\bootstrap-datepicker.js">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="content\js\lib\datepicker\bootstrap-datepicker.zh-CN.js">
+    <Content Include="content\js\mod\picker.date.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="content\js\mod\picker.js">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="content\js\lib\excanvas.js">
@@ -402,9 +405,6 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="content\js\mod\collapsible.js">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="content\js\mod\datepicker.js">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="content\js\mod\waves.js">
